--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "scripts": {
     "start": "node ./dist/bin/www.js",
-    "start_pm2": "pm2 start ./dist/bin/www.js --watch --no-daemon",
-    "stop": "pm2 kill",
     "dev": "ts-node ./src/bin/www.ts",
     "copy-files": "xcopy .\\src\\public .\\dist\\public\\ /E /Y && xcopy src\\views dist\\views\\ /E /Y",
     "build": ".\\node_modules\\.bin\\tsc && npm run copy-files"
@@ -17,12 +15,16 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "prebuilt-tdlib": "^0.1008005.0",
     "pug": "2.0.0-beta11",
+    "tdl": "^7.0.0",
+    "tdl-tdlib-addon": "^1.2.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.4",
+    "tdlib-types": "^0.1001008.1",
     "ts-node": "^10.9.1"
   }
 }
